# demo

./: .dockerignore  .flake8  .gitignore  .local.env  README.md  poetry.test.Dockerfile  pyproject.toml  pytest.ini  test.sh
src/backend/: backend.Dockerfile  main.py  poetry.backend.Dockerfile  pyproject.toml
src/docker/: .dockerignore  .remote.env  docker-compose.yml
src/frontend/: .env.production.local  README.md  frontend.Dockerfile  package-lock.json  package.json
src/frontend/src/: App.vue
src/frontend/src/components/: DockerContainerManager.vue
src/frontend/src/router/: index.js
src/mock_server/: main.py  mock.Dockerfile  poetry.mock.Dockerfile  pyproject.toml  requirements.txt
src/mock_server/commons/: logger.py
src/mock_server/handlers/: __init__.py  base.py  docker_manage_handler.py  root_handler.py  utils.py
src/mock_server/utils/: argpars.py
tests/: config.py  conftest.py
tests/api_tests/: test_backend_api.py
tests/commons/: client.py  interfaces.py
tests/commons/models/base/: base_selenium.py
tests/commons/models/pom/: docker_list_page.py
tests/configs/: locust_base.conf
tests/performance_tests/: perfomance_tests.py  performance_tests.py
tests/scripts/: docker_ps.bat  docker_ps.sh  docker_restart.bat  docker_start.bat  docker_start.sh  docker_status.bat  docker_status.sh  docker_stop.bat  docker_stop.sh  performance_runner.sh  test.sh
tests/ui_tests/: test_ui_docker_manager.py
