[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Demonstrtion code base for HR"
authors = ["stix <stix_simfi@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ConfigArgParse = "^1.7"
fastapi = "^0.103.1"
aiohttp = "^3.10.10"
uvicorn = {extras = ["standart"], version = "^0.23.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"