[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Demonstrtion code base for HR"
authors = ["stix <stix_simfi@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ConfigArgParse = "^1.7"
aiohttp = "^3.10.10"
aiohttp_cors = "^0.7.0"
aiomisc = {extras = ["aiohttp"], version = "^17.5.26"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"